@@ -202,7 +202,7 @@
             <include content="Object_Info_Button">
                 <param name="id" value="8" />
                 <param name="groupid" value="8008" />
-                <param name="label" value="Play" />
+                <param name="label" value="$VAR[Label_Info_PlayButton]" />
                 <param name="icon" value="special://skin/extras/icons/play3.png" />
                 <param name="visible" value="Control.IsEnabled(8) + String.IsEmpty(ListItem.Property(tmdb_id))" />
             </include>
